Remove some code smells by using Java 17 features