@@ -21,7 +21,6 @@
 package de.qaware.openapigeneratorforspring.common.reference.fortype;
 
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class DefaultReferenceIdentifierConflictResolverFactory {
@@ -30,7 +29,7 @@ public class DefaultReferenceIdentifierConflictResolverFactory {
         return mapper.apply((itemsWithSameReferenceIdentifier, originalIdentifier) ->
                 IntStream.range(0, itemsWithSameReferenceIdentifier.size()).boxed()
                         .map(i -> originalIdentifier + "_" + i)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 }
