@@ -4,7 +4,6 @@ package de.qaware.openapigeneratorforspring.common.paths;
 import org.junit.jupiter.api.Test;
 import org.springframework.web.bind.annotation.RequestMethod;
 
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -16,7 +15,7 @@ class SpringWebRequestMethodEnumMapperTest {
                 .containsExactlyInAnyOrderElementsOf(
                         Stream.of(de.qaware.openapigeneratorforspring.model.path.RequestMethod.values())
                                 .map(Enum::name)
-                                .collect(Collectors.toList())
+                                .toList()
                 );
     }
 }
